--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "pmon",
   "dependencies": {
     "bluebird": "^3.4.6",
-    "cli-table2": "^0.2.0"
+    "cli-table2": "^0.2.0",
+    "lodash": "^4.16.2",
+    "yargs": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^3.5.0",
